Update to Java 17
Start to use Java 17 features. The main one is replacing `.collect(Collectors.toList())` with `.toList()`

*However* this revealed some bugs (albeit so far only in test code). It seems that the former created a mutable list, whereas the later provides an immutable list. But neither method makes any guarantee of immutability, so if/when this matters we should use something like
```
stream.collect(Collectors.toCollection(ArrayList::new))
```

Along the way, accidentally fixed Wand tool shortcut issue in the same commit.