@@ -29,8 +29,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
-
 import qupath.lib.common.ColorTools;
 
 /**
@@ -196,7 +194,7 @@ public final class PathClassTools {
 	 */
 	public static PathClass uniqueNames(PathClass pathClass) {
 		var names = splitNames(pathClass);
-		var namesUnique = names.stream().distinct().collect(Collectors.toList());
+		var namesUnique = names.stream().distinct().toList();
 		if (names.equals(namesUnique))
 			return pathClass;
 		return PathClass.fromCollection(namesUnique);
