@@ -41,8 +41,6 @@ import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
-
 import org.controlsfx.control.CheckComboBox;
 import org.controlsfx.control.ListSelectionView;
 import org.controlsfx.dialog.ProgressDialog;
@@ -306,7 +304,7 @@ public class MeasurementExportCommand implements Runnable {
 		}
 				
 		var checkedItems = includeCombo.getCheckModel().getCheckedItems();
-		String[] include = checkedItems.stream().collect(Collectors.toList()).toArray(new String[checkedItems.size()]);
+		String[] include = checkedItems.stream().toList().toArray(new String[checkedItems.size()]);
 		String separator = defSep;
 
 		switch (separatorCombo.getSelectionModel().getSelectedItem()) {
